@@ -32,7 +32,7 @@ instead (see below for details).
 </dd>
 </dl>
 
-__DOWNLOAD_INFO__(`3.0.3', `10 Oct 2008', `3.1.51', `21 Jul 2008')
+__DOWNLOAD_INFO__(`3.0.3', `10 Oct 2008', `3.1.52', `9 Feb 2009')
 </div>
 
 <blockquote class="note">
