@@ -30,6 +30,11 @@
 
 <div class="section">
 <dl>
+<dt>February 9, 2009</dt>
+<dd>A new snapshot of the current development version of Octave is
+available for ftp.  You should only be using this version if you are
+interested in testing the latest features and don't mind hitting the
+occasional bug.</dd>
 <dt>October 10, 2008</dt>
 <dd>Version 3.0.3 has been released and is now available for ftp.
 Octave 3.0.3 is a bug-fixing release.  Most bugs reported since the
